--- a/navblog.html
+++ b/navblog.html
@@ -10,9 +10,8 @@
 <body>
     <nav class="container">
         <div class="inner">
-        <div class="column">
+        <div class="column hea">
             <div class="head">Finding My #WanderLust<h5>A blog exploring and finding</h5></div>
-            
         </div>
         <ul class="column l1">
             <li><a>HOME</a></li>
